--- a/Website/Main.html
+++ b/Website/Main.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="MainPicter">
-    <img src="files/IMG_1303.jpg" width="600" height="400" class="border"><br>
+    <img src="files/IMG_1303.jpg" alt=Котик width="600" height="400" class="border"><br>
   </div>
 
   <hr width="1500" size=2px color="green">
