--- a/Website/Contacts.html
+++ b/Website/Contacts.html
@@ -9,22 +9,15 @@
 
 <body>
     <nav>
-        <ul>
-            <li>
-                <a href="Main.html"> Главная </a>
-            </li>
-            <li>
-                <a href="Gallery.html"> Галерея </a>
-            </li>
-            <li>
-                <a href="Code.html"> Программирование </a>
-            </li>
-            <li>
-                <a href="Contacts.html"> Kонтакты </a>
-            </li>
-            <li>
-                <a href="Archive.html"> Архив работ </a>
-            </li>
+        <div class="Logo">
+            <img src="files/cat.jpg" alt=Логотип width="100" height="100" class="border">
+        </div>
+        <ul style="float:right; list-style-type:none;">
+            <li><a href="Main.html"> Главная </a></li>
+            <li><a href="Gallery.html"> Галерея </a></li>
+            <li><a href="Code.html"> Программирование </a></li>
+            <li><a href="Contacts.html"> Kонтакты </a></li>
+            <li><a href="Archive.html"> Архив работ </a></li>
         </ul>
     </nav>
 
